2011-08-03  Dimitri Glazkov  <dglazkov@chromium.org>

        Allow multiple bug identifiers in test expectations.
        https://bugs.webkit.org/show_bug.cgi?id=65642

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_expectations.py: Tweaked to allow multiple bug ids.
        * Scripts/webkitpy/layout_tests/models/test_expectations_unittest.py: Added tests.

2011-08-03  Dimitri Glazkov  <dglazkov@chromium.org>

        Teach BuilderToPort to distinguish between Release and Debug builders.
        https://bugs.webkit.org/show_bug.cgi?id=65628

        Reviewed by Adam Barth.

        * Scripts/webkitpy/tool/commands/rebaseline.py: Added a smart options object and passed it to port factory.
        * Scripts/webkitpy/tool/commands/rebaseline_unittest.py: Added tests.

2011-08-03  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt] Fix running qmltests for WK2 in the bot
        https://bugs.webkit.org/show_bug.cgi?id=65621

        Reviewed by Csaba Osztrogonác.

        The path for QML_IMPORT_PATH was assuming we were running the WK1 tests,
        but now there's the case for WK2 UIProcess tests as well.

        * Scripts/run-qtwebkit-tests: add both possible paths to the QML_IMPORT_PATH.

2011-08-02  Dimitri Glazkov  <dglazkov@chromium.org>

        Add a way to edit test expectations.
        https://bugs.webkit.org/show_bug.cgi?id=64922

        Implements a TestExpectationsEditor, which provides a standard way to
        update and remove test expectations.

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_expectations.py: Changed TestExpectationSerializer to skip lines that match no test configurations,
            added TestExpectationLine.is_flaky, added BugManager, a simple interface to be fleshed out later, and a TestExpectationsEditor, the big
            enchilada.