@@ -1,5 +1,17 @@
 2011-08-03  Dimitri Glazkov  <dglazkov@chromium.org>
 
+        Add "optimize-expectations" command to webkit-patch.
+        https://bugs.webkit.org/show_bug.cgi?id=65633
+
+        For now, only operates on Chromium test_expectations.txt and does not report errors/warnings.
+
+        Reviewed by Adam Barth.
+
+        * Scripts/webkitpy/tool/commands/__init__.py: Added command.
+        * Scripts/webkitpy/tool/commands/expectations.py: Added.
+
+2011-08-03  Dimitri Glazkov  <dglazkov@chromium.org>
+
         Allow multiple bug identifiers in test expectations.
         https://bugs.webkit.org/show_bug.cgi?id=65642
 
